# warp

./: AGENTS.md  CONTRIBUTING.md  Cargo.toml  FAQ.md  HELLO_WORLD_TEST.md  README.md  SECURITY.md  WARP.md  flake.nix  skills-lock.json  warp-skills-lock.json
.cargo/: config.toml
.github/: STAKEHOLDERS  dependabot.yml  pull_request_template.md
.github/scripts/: stale-requested-changes-prs.js
.github/workflows/: build-oss.yml  check_approvals.yml  ci.yml  close_stale_fix_prs.yml  create_release.yml  cut_new_releases.yml  delete_release.yml  docubot_reply_to_comment.yml  feature_flag_cleanup.yml  label_external_contributors.yml  populate_build_cache.yml  repo-sync.yml  stale_requested_changes_prs.yml  sync-pr-checks.yml  update-dedupe-local.yml  update-pr-review-local.yml  update-triage-local.yml  warp_cleanup_fix_prs.yml
agents/specs/: APP-4854: collapse inline model picker reasoning variants.md  QUALITY-1057: copy block as image.md
app/: Cargo.toml  build.rs
app/src/: app_menus.rs  app_state.rs  appearance.rs  crash_recovery.rs  features.rs  input_classifier.rs  lib.rs  lib_tests.rs  menu.rs  modal.rs  profiling.rs  projects.rs  resource_limits.rs  root_view.rs  root_view_tests.rs  session_management.rs  tab.rs  tracing.rs  tui.rs  tui_export.rs  tui_export_tests.rs  tui_tests.rs  voltron.rs  warp_managed_paths_watcher.rs  warp_managed_paths_watcher_tests.rs  wasm_nux_dialog.rs
crates/ai/: Cargo.toml
crates/asset_cache/: Cargo.toml
crates/asset_cache/src/: lib.rs
crates/build_cache/: Cargo.toml
crates/build_cache/src/: lib.rs  lib_tests.rs  spacectl.rs  spacectl_tests.rs
crates/cloud_object_client/: Cargo.toml
crates/cloud_object_models/: Cargo.toml
crates/cloud_object_persistence/: Cargo.toml
crates/cloud_objects/: Cargo.toml
crates/command/: Cargo.toml
crates/computer_use/: Cargo.toml
crates/computer_use/src/: lib.rs  mock.rs  overlay.rs  overlay_tests.rs  testing.rs
crates/computer_use/src/linux/: mod.rs  recording.rs  recording_benchmark.rs  recording_tests.rs
crates/computer_use/src/linux/wayland/: mod.rs
crates/computer_use/src/linux/x11/: mod.rs  screenshot.rs  seat.rs  windows.rs
crates/computer_use/src/mac/: activation.rs  activation_tests.rs  keyboard.rs  keycode_cache.rs  mod.rs  mouse.rs  screenshot.rs
crates/computer_use/src/windows/: mod.rs
crates/editor/: Cargo.toml
crates/http_client/: Cargo.toml
crates/http_server/: Cargo.toml
crates/input_classifier/: Cargo.toml
crates/integration/: Cargo.toml
crates/ipc/: Cargo.toml
crates/jsonrpc/: Cargo.toml
crates/jsonrpc/src/: service.rs  service_tests.rs
crates/local_control/: Cargo.toml
crates/local_control/src/: auth.rs  auth_tests.rs  catalog.rs  client.rs  client_tests.rs  discovery.rs  discovery_tests.rs  lib.rs  protocol.rs  protocol_tests.rs  scripting.rs  scripting_tests.rs  selection.rs  selection_tests.rs  selectors.rs
crates/lsp/: Cargo.toml
crates/managed_secrets/: Cargo.toml
crates/mcp/: Cargo.toml
crates/mcp/src/: lib.rs  oauth.rs  oauth_tests.rs  runtime.rs  runtime_tests.rs
crates/mcp/src/oauth/: loopback.rs
crates/onboarding/: Cargo.toml
crates/remote_server/: Cargo.toml
crates/repo_metadata/: Cargo.toml
crates/settings/: Cargo.toml
crates/simple_logger/: Cargo.toml
crates/sum_tree/: Cargo.toml
crates/syntax_tree/: Cargo.toml
crates/ui_components/: Cargo.toml
crates/vim/: Cargo.toml
crates/voice_input/: Cargo.toml
crates/warp_completer/: Cargo.toml
crates/warp_core/: Cargo.toml
crates/warp_errors/: Cargo.toml
crates/warp_errors/src/: anyhow.rs  errors_tests.rs  lib.rs  registration.rs  reqwest.rs  tokio.rs  websocket.rs
crates/warp_files/: Cargo.toml
crates/warp_graphql_schema/: package.json
crates/warp_logging/: Cargo.toml
crates/warp_search_core/: Cargo.toml
crates/warp_search_core/src/: data_source.rs  item.rs  lib.rs  macros.rs  mixer.rs  mixer_tests.rs  result_renderer.rs  searcher.rs  searcher_tests.rs  telemetry.rs
crates/warp_server_auth/: Cargo.toml
crates/warp_server_auth/src/: auth_state.rs  credentials.rs  lib.rs  user.rs
crates/warp_server_auth/src/user/: persistence.rs  persistence_tests.rs
crates/warp_server_client/: Cargo.toml
crates/warp_server_client/src/: base_client.rs  base_client_tests.rs  graphql_helpers.rs  graphql_helpers_tests.rs  iap.rs  iap_tests.rs  lib.rs  network_logging.rs  network_logging_tests.rs  public_api.rs  public_api_tests.rs
crates/warp_server_client/src/auth/: client.rs  mod.rs  mod_tests.rs  session.rs  session_tests.rs
crates/warp_terminal/: Cargo.toml
crates/warp_tui/: Cargo.toml
crates/warp_tui/examples/: tui_input_demo.rs
crates/warp_tui/src/: agent_block.rs  agent_block_sections.rs  agent_block_tests.rs  agent_identity.rs  agent_identity_tests.rs  alt_screen_element.rs  alt_screen_element_tests.rs  alt_screen_view.rs  alt_screen_view_tests.rs  autoupdate.rs  clipboard.rs  clipboard_tests.rs  conversation_menu.rs  conversation_menu_tests.rs  conversation_selection.rs  conversation_selection_tests.rs  editor_element.rs  editor_element_tests.rs  inline_menu.rs  inline_menu_tests.rs  input_suggestions_mode.rs  input_suggestions_mode_tests.rs  keybindings.rs  keybindings_tests.rs  lib.rs  main.rs  mcp_menu.rs  model_menu.rs  model_menu_tests.rs  option_selector.rs  option_selector_tests.rs  resume.rs  resume_tests.rs  root_view.rs  run_agents_card_view.rs  run_agents_card_view_tests.rs  session.rs  session_tests.rs  slash_commands.rs  slash_commands_tests.rs  (+31 more)
crates/warp_tui/src/input/: model.rs  view.rs  view_tests.rs
crates/warp_util/: Cargo.toml
crates/warpui/: Cargo.toml  build.rs
crates/warpui_core/: Cargo.toml
crates/warpui_extras/: Cargo.toml
crates/warpui_tui/: Cargo.toml
lints/: rust-toolchain.toml
lints/src/: lib.rs
script/: benchmark_linux_recording  bootstrap  check_no_inline_test_modules  deploy_remote_server  deploy_remote_server_to_test_vm  format  install_cargo_binstall  install_cargo_test_deps  presubmit  run  run-tui  test_warpctrl_early_dispatch  update_plist
theme-verify/: warp_maestro_light.yaml
(+1875 files in other folders)
