[package]
name = "build_cache"
version = "0.1.0"
edition = "2024"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-futures.workspace = true
warp_errors.workspace = true

[dev-dependencies]
futures.workspace = true
