[package]
name = "computer_use"
edition = "2024"
authors.workspace = true
default-run = "use_computer"
publish.workspace = true
license.workspace = true

[[bin]]
name = "use_computer"
path = "src/bin/use_computer.rs"

[features]
test-util = []

[dependencies]
anyhow.workspace = true
warp_errors.workspace = true
async-trait.workspace = true
cfg-if.workspace = true
clap.workspace = true
instant.workspace = true
log.workspace = true
pathfinder_geometry.workspace = true
serde.workspace = true
serde_with.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
command.workspace = true
image.workspace = true
# `instant` is already provided by the common [dependencies] table above.
libc.workspace = true
objc2.workspace = true
# `NSEvent`/`NSGraphicsContext`/`objc2-core-graphics` are needed to build window-targeted mouse
# events via `NSEvent::mouseEventWithType_...` and bridge to `CGEvent` for PID-targeted posting.
objc2-app-kit = { workspace = true, features = [
    "NSEvent",
    "NSGraphicsContext",
    "objc2-core-graphics",
] }
objc2-core-foundation.workspace = true
# The `libc` feature is required for `CGEvent::post_to_pid`, which delivers events to a
# specific process without moving the global cursor.
objc2-core-graphics = { workspace = true, features = ["libc"] }
tempfile.workspace = true
warpui_core.workspace = true

[target.'cfg(any(target_os = "linux", target_os = "freebsd"))'.dependencies]
ashpd.workspace = true
futures.workspace = true
image.workspace = true
nix = { workspace = true, features = ["signal"] }
tokio = { workspace = true, features = ["process", "time"] }
url.workspace = true
uuid.workspace = true
warpui_core.workspace = true
# `xinput` provides the XI2 (MPX) device hierarchy used for background per-window control,
# `composite` provides off-screen window capture for background window screenshots.
x11rb = { workspace = true, features = ["composite", "xinput", "xtest"] }
zbus.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
image.workspace = true
warpui_core.workspace = true
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_StationsAndDesktops",
    "Win32_UI_HiDpi",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
computer_use = { path = ".", features = ["test-util"] }

[build-dependencies]
cfg_aliases = "0.2.1"
