[package]
name = "local_control"
edition = "2024"
description = "Shared protocol and discovery primitives for Warp local control"
authors.workspace = true
publish.workspace = true
license.workspace = true

[dependencies]
base64.workspace = true
chrono.workspace = true
rand.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[dev-dependencies]
command.workspace = true
tempfile.workspace = true
